--- a/openshift/pipeline/pipeline.buildconfig.yml
+++ b/openshift/pipeline/pipeline.buildconfig.yml
@@ -5,12 +5,12 @@ metadata:
 spec:
   source:
     git:
-      uri: [THE_URI_OF_YOUR_GIT_REPO]
-      ref: master
+      uri: https://github.com/KonCarmine/workshop.git
+      ref: without_prod_template
   strategy:
     jenkinsPipelineStrategy:
       jenkinsfilePath: jenkinsfile.groovy
       env:
       - name: OPENSHIFT_NAMESPACE
-        value: [THE_NAME_OF_YOUR_OPENSHIFT_PROJECT]
+        value: konplancarminetest
     type: JenkinsPipeline
